--- a/front/styles.css
+++ b/front/styles.css
@@ -16,6 +16,8 @@ body {
 	-moz-osx-font-smoothing: grayscale;width: 100vw;
 
 	overflow: auto;
+
+	user-select: none;
 }
 
 nav {
@@ -71,10 +73,25 @@ nav {
 	border-bottom: 1px solid rgba(0,0,0,0.2);
 	background-image: url("./source/icons/search.svg");
 	box-shadow: 0 3px 16px rgba(0,0,0,0.4);
+
+	transition: 0.05s ease-out;
 }
 
 .text-field[type="search"]:focus {
-	border-bottom: 2px solid rgba(0, 31, 84, 0.7);
+	border-bottom: 2px solid rgb(2, 46, 93);
+}
+
+.text-field[type="search"]:not(:placeholder-shown),
+.text-field[type="search"]:-webkit-autofill {
+	background-color: rgba(229, 229, 229, 1) !important;
+	background-image: url("./source/icons/search.svg") !important;
+	transition: background 9999s ease-in-out 0s;
+}
+
+.text-field[type="search"]::-webkit-search-cancel-button {
+	-webkit-appearance: none;
+	appearance: none;
+	display: none;
 }
 
 .text-field:focus {
@@ -127,6 +144,8 @@ nav {
 	border-top: 1px solid rgba(0,0,0,0.2);
 }
 
+
+
 #destination {
 	background-image: url("./source/icons/pin.svg");
 }
@@ -149,9 +168,17 @@ button {
 
 	margin-top:7.5%;
 
-	box-shadow: 0 12px 16.4px 3px rgba(0,0,0,0.22);
+	box-shadow: 0 12px 16.4px 3px rgba(0,0,0,0.1);
 
 	text-shadow: 0 9px 11.8px rgba(0,0,0,0.25);
+
+	transition: 0.05s ease-out;
+}
+
+button:active {
+	box-shadow: 0 12px 16.4px 3px rgba(0,0,0,0.22);
+	background-color: rgb(2, 46, 93);
+	font-size: 36px;
 }
 
 #events {
@@ -191,6 +218,52 @@ button {
 
 	display: flex;
 	align-items: end;
+
+	transition: 0.15s ease-in-out;
+}
+
+.place p, .event p {
+	margin: 0;
+	padding: 0;
+	
+	color: white;
+	text-shadow: 0 2px 5px rgba(0,0,0,0.7);
+
+	margin-left: 5%;
+	margin-bottom: 3%;
+
+	font-size: 15px;
+	font-weight: 500;
+
+	position: relative;
+
+	transition: 0.05s ease-in-out;
+}
+
+.place:active, .event:active {
+	border-bottom: 2px solid rgb(2, 46, 93);
+	box-shadow: 0 2px 10px 0px rgba(0,0,0,0.3);
+}
+
+.place:active p, .event:active p {
+	font-size: 16px;
+	font-weight: 700;
+}
+
+#main-page { 
+	display: none;
+}
+
+#place-page {
+	display: none;
+}
+
+#event-page {
+	display: none;
+}
+
+#search-page {
+	display: none;
 }
 
 main {
@@ -209,7 +282,7 @@ main {
 	margin-left: 10vw;
 }
 
-#places-container {
+#places-container, #results-container {
 	/* Grid alignment */
 	display: grid;
 	justify-content: center;
@@ -236,22 +309,6 @@ main {
 
 }
 
-.place p, .event p {
-	margin: 0;
-	padding: 0;
-	
-	color: white;
-	text-shadow: 0 2px 5px rgba(0,0,0,0.7);
-
-	margin-left: 5%;
-	margin-bottom: 3%;
-
-	font-size: 15px;
-	font-weight: 500;
-
-	position: relative;
-}
-
 /* Places.html */
 #go-to-container {
 	display:flex;
@@ -265,6 +322,8 @@ main {
 	height: 15vh;
 
 	margin:auto;
+
+	display:none;
 }
 
 #go-to-container button {
@@ -313,3 +372,11 @@ main {
 	margin-top: 1vh;
 	font-weight: 400;
 }
+
+#place-container {
+	display: flex;
+
+	justify-content: center;
+	align-items: center;
+}
+
