--- a/TaxiUp/nav/templates/nav/login.html
+++ b/TaxiUp/nav/templates/nav/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,14 +7,15 @@
 	<!--Get Screen Dimensions-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<link rel="stylesheet" href="./styles.css"/>
-	<link rel="stylesheet" href="./login.css"/>
+	<link rel="stylesheet" href="{% static 'nav/styles.css' %}"/>
+	<link rel="stylesheet" href="{% static 'nav/login.css' %}"/>
 </head>
 <body>
 	<div id="login-container">
-		<input class="text-field" type="text" placeholder="Username" />
-		<input class="text-field" type="password" placeholder="Password"/>
+		<input id="username" class="text-field" type="text" placeholder="Username" />
+		<input id="password" class="text-field" type="password" placeholder="Password"/>
 		<button id="login">Log In</button>
 	</div>
 </body>
+
 </html>
