--- a/TaxiUp/nav/templates/nav/index.html
+++ b/TaxiUp/nav/templates/nav/index.html
@@ -25,17 +25,12 @@
 		<p class="heading">Places</p>
 		<div id="places-container">
 			{% for place in places %}
-			<a href="localhost:8000/main?"place=old>
-			<div class="place">
-				<img src="{% static 'nav/images/exampleoldarts.jpg' %}" alt="Image of {{ place.name }}">
-				<p> {{place.name}} </p> </div>
+			<a id="{{place.name}}" href="http://localhost:8000/place?place={{place.id}}">
+			<div id="{{place.name}}" class="place">
+				<img id="{{place.name}}" src="{% static 'nav/images/exampleoldarts.jpg' %}" alt="Image of {{ place.name }}">
+				<p id="{{place.name}}" > {{place.name}} </p> </div>
 			</a>
 			{% endfor %}
-			<div class="place"><p>Engineering I</p></div>
-			<div class="place"><p>Aula</p></div>
-			<div class="place"><p>Engineering III</p></div>
-			<div class="place"><p>Engineering III</p></div>
-			<div class="place"><p>Engineering III</p></div>
 		</div>
 	</main>
 
@@ -47,5 +42,14 @@
 
 	<script src="{% static 'nav/js/location.js' %}"></script>
 	<script src="{% static 'nav/js/script.js' %}"></script>
+	<script>
+		  document.addEventListener("DOMContentLoaded", function () {
+			const links = document.querySelectorAll("a");
+
+			links.forEach((link) => {
+				link.href = link.href+`&lat=${encodeURIComponent(Math.floor(latitude*1000000)/1000000)}&long=${encodeURIComponent(Math.floor(longitude*1000000)/1000000)}`;
+			});
+		});
+	</script>
 </body>
 </html>
