--- a/TaxiUp/nav/templates/nav/index.html
+++ b/TaxiUp/nav/templates/nav/index.html
@@ -42,7 +42,7 @@
 		<article>
 			<p class="heading">Engineering III</p>
 			<div id="place-container">
-				<div class="place"></div>
+				<div class="place noninteractive"></div>
 			</div>
 
 			<div id="description-container">
@@ -79,7 +79,7 @@
 	<div id="search-page">
 		<p class="heading">Results</p>
 		<div id="results-container">
-			<div class="place"><p>Engineering III</p></div>
+			<div class="place"><p>Old-Arts</p></div>
 		</div>
 	</div>
 
