--- a/TaxiUp/nav/templates/nav/index.html
+++ b/TaxiUp/nav/templates/nav/index.html
@@ -20,7 +20,7 @@
 		<div id="events">
 			<p class="heading">Events</p>
 			<div id="events-container">
-				<div class="event"><p>Nasty C concert</p></div>
+				<div class="event"><p>Piazza Festival</p></div>
 			</div>
 		</div>
 		-->
@@ -56,7 +56,7 @@
 			<div id="events">
 				<p class="heading">Piazza Festival</p>
 				<div id="events-container">
-					<div class="event"></div>
+					<div class="event noninteractive"></div>
 				</div>
 			</div>
 
