Updated login page to center inputs

--- a/TaxiUp/nav/templates/nav/index.html
+++ b/TaxiUp/nav/templates/nav/index.html
@@ -40,7 +40,7 @@
 	</div>
 	<div id="place-page"> 
 		<article>
-			<p class="heading">Engineering III</p>
+			<p class="heading">Old Arts</p>
 			<div id="place-container">
 				<div class="place noninteractive"></div>
 			</div>
