background requests + json

--- a/TaxiUp/nav/templates/nav/index.html
+++ b/TaxiUp/nav/templates/nav/index.html
@@ -30,7 +30,8 @@
 			<div id="places-container">
 				{% for place in places %}
 				<!--<a id="{{place.name}}" href="http://localhost:8000/place?place={{place.id}}">-->
-				<div id="{{place.name}}" class="place" style="background-image: url('{% static 'nav/images/exampleoldarts.jpg' %}')">					
+
+				<div id="{{place.id}}" class="place" style="background-image: url('{% static 'nav/images/' %}{{ place.id }}.jpg')">					
 					<p id="{{place.name}}" > {{place.name}} </p> </div>
 				<!--</a>-->
 				{% endfor %}
@@ -40,9 +41,9 @@
 	</div>
 	<div id="place-page"> 
 		<article>
-			<p class="heading">Old Arts</p>
+			<p id= "headPlace" class="heading">Engineering III</p>
 			<div id="place-container">
-				<div class="place noninteractive"></div>
+				<div id="placeContainer1" class="place noninteractive" style=""></div>
 			</div>
 
 			<div id="description-container">
