--- a/TaxiUp/nav/static/nav/styles.css
+++ b/TaxiUp/nav/static/nav/styles.css
@@ -6,7 +6,7 @@ body {
 	margin: 0;
 
 
-	font-family: "Montserrat", sans-serif;
+	font-family: "Montserrat", sans-serif !important;
 
 	height: 100vh;
 
@@ -172,6 +172,7 @@ button {
 	box-sizing: border-box;
 
 	font-size: 35px;
+	font-family: "Montserrat", sans-serif !important;
 	vertical-align: center;
 
 	border: none;
@@ -182,7 +183,7 @@ button {
 	width: 75vw;
 
 	color: white;
-	font-weight: 900;
+	font-weight: 800;
 
 	margin-top:7.5%;
 
