--- a/TaxiUp/nav/templates/nav/index.html
+++ b/TaxiUp/nav/templates/nav/index.html
@@ -104,7 +104,9 @@
 			<p>Trip Fare: R50</p>
 		</div>
 
-
+		<div class="ride-code-container">
+			<p class="ride-code">CODE: 34822</p>
+		</div>
 	</div>
 
 	<!-- Buttons -->
