--- a/TaxiUp/nav/templates/nav/driver.html
+++ b/TaxiUp/nav/templates/nav/driver.html
@@ -13,8 +13,6 @@
 	</style>
 </head>
 <body>
-	<div id="back"></div>
-
 	<div id="orders-page">
 		<div class="heading" id="accept-order-heading">Accept Orders:</div>
 		<div id="orders-container">
@@ -68,5 +66,7 @@
 	<div id="cancel-trip-container">
 		<button id="cancel-trip">Cancel</button>
 	</div>
+
+	<script src="{% static 'nav/js/driver_nav.js' %}"></script>
 </body>
 </html>
