--- a/TaxiUp/nav/templates/nav/index.html
+++ b/TaxiUp/nav/templates/nav/index.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
-	<div id="back"></div>
+	<div id="user-back-button" class="back"></div>
 
 	<nav>
 		<input class="text-field" id="search" type="search" placeholder="Search Places"/>
