trip page and starting driver page

--- a/TaxiUp/nav/templates/nav/index.html
+++ b/TaxiUp/nav/templates/nav/index.html
@@ -93,19 +93,19 @@
 	</div>
 
 	<div id="trip-page">
-		<p class="trip-heading">Trip in progress...</p>
+		<p id="trip-heading" class="trip-heading">Trip in progress...</p>
 		<p class="trip-heading" id="trip-eta">Driver <span>3</span> minutes away</p>
 
 		<div id="destination-container">
 			<p id="trip-destination">Traveling to Engineering III</p>
 			<div class="place noninteractive" id="trip-destination-pic"></div>
 
-			<p>Distance: 500m</p>
-			<p>Trip Fare: R50</p>
+			<p id="distance">Distance: 500m</p>
+			<p id="fare">Trip Fare: R50</p>
 		</div>
 
 		<div class="ride-code-container">
-			<p class="ride-code">CODE: 34822</p>
+			<p id="ride-code" class="ride-code">CODE: 34822</p>
 		</div>
 	</div>
 
