--- a/TaxiUp/nav/templates/nav/driver.html
+++ b/TaxiUp/nav/templates/nav/driver.html
@@ -17,7 +17,7 @@
 		<div class="heading" id="accept-order-heading">Accept Orders:</div>
 		<div id="orders-container">
 			{% for trip in trips %}
-			<div class="order">
+			<div id="{{trip.id}}" class="order">
 				<p>{{trip.pickUp}} to {{trip.dropOff}}</p>
 			</div>
 			{% endfor %}
@@ -66,7 +66,7 @@
 	<div id="cancel-trip-container">
 		<button id="cancel-trip">Cancel</button>
 	</div>
-
+	<script src="{% static 'nav/js/location.js' %}"></script>
 	<script src="{% static 'nav/js/driver_nav.js' %}"></script>
 </body>
 </html>
