initial trip accepted page

--- a/TaxiUp/nav/templates/nav/driver.html
+++ b/TaxiUp/nav/templates/nav/driver.html
@@ -31,17 +31,17 @@
 
 		<!--Passenger Information-->
 		<p class="heading">Passenger</p>
-		<p class="order-info">Jane Doe</p>
+		<p id="passenger" class="order-info">Jane Doe</p>
 
 		<!--Trip Information-->
 		<p class="heading">Trip</p>
-		<p class="order-info">Date: 20 April 2025</p>
-		<p class="order-info">Requested: 17:00</p>
-		<p class="order-info">Pick Up: Marenskey</p>
-		<p class="order-info">Drop Off: Engineering III</p>
+		<p id="date" class="order-info">Date: 20 April 2025</p>
+		<p id="time" class="order-info">Requested: 17:00</p>
+		<p id="pick-up" class="order-info">Pick Up: Marenskey</p>
+		<p id="drop-off" class="order-info">Drop Off: Engineering III</p>
 
 		<div class="ride-code-container">
-			<p class="ride-code">CODE: 34822</p>
+			<p id="ride-code" class="ride-code">CODE: 34822</p>
 		</div>
 
 		<!--
