--- a/TaxiUp/nav/templates/nav/driver.html
+++ b/TaxiUp/nav/templates/nav/driver.html
@@ -63,6 +63,15 @@
 		-->
 	</div>
 
+	<div id="cancel-page">
+		<div class="back" id="driver-back-button"></div>
+		<p class="order-heading">About To Cancel Ride</p>
+		<div class="button-container">
+			<button id="complete-ride">Complete Ride</button>
+			<button id="quit-ride">Quit Ride</button>
+		</div>
+	</div>
+
 	<div id="cancel-trip-container">
 		<button id="cancel-trip">Cancel</button>
 	</div>
