--- a/TaxiUp/nav/static/nav/driver.css
+++ b/TaxiUp/nav/static/nav/driver.css
@@ -89,3 +89,68 @@
 	text-align: center;
 }
 
+#cancel-page {
+	display: none;
+	overflow: show;
+
+}
+
+#cancel-page .order-heading {
+	font-size: 25px;
+	margin: 5vh 0;
+}
+
+#cancel-page .back {
+	z-index: 1100;
+	background: url("./source/icons/back.svg") no-repeat;
+	background-size: 250%;
+	background-position: 50% 50%;
+
+	width: 7vw;
+	aspect-ratio: 1/1;
+
+	position: fixed;
+	top: 3vh;
+	left: 5vw;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.button-container {
+	box-sizing: border-box;
+	width: 80%;
+	height: 30%;
+
+	margin: auto;
+
+	border: 1px solid rgba(0,0,0,0.3);
+	border-bottom: 2px solid rgba(2, 46, 93, 0.7);
+	box-shadow: 0 0 15px 0px rgba(0,0,0,0.2);
+
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	
+	align-items: center;
+}
+
+
+.button-container button {
+	font-weight: 600;
+	font-size: 27px;
+	margin: 0;
+
+	border-radius: 7px;
+
+	display: inline-block;
+
+	width: 87%;
+	height: 32%;
+}
+
+#quit-ride {
+	background-color: red;
+}
