--- a/TaxiUp/nav/templates/nav/index.html
+++ b/TaxiUp/nav/templates/nav/index.html
@@ -145,6 +145,15 @@
 			<p id="fare">Trip Fare: R50</p>
 			<p id="ride-code" class="ride-code">CODE: 34822</p>
 		</div>
+
+		<div id="pickup-container">
+			<div class="place noninteractive" id="trip-pickup-pic"></div>
+			<div id="pickup-text-container">
+				<p id="trip-pickup">Pick Up: Engineering III</p>
+				<p class="tip">Wait at the spot shown on this photo</p>
+			</div>
+		</div>
+
 	</div>
 
 	<!-- Buttons -->
