--- a/TaxiUp/nav/static/nav/driver.css
+++ b/TaxiUp/nav/static/nav/driver.css
@@ -124,9 +124,10 @@
 .button-container {
 	box-sizing: border-box;
 	width: 80%;
-	height: 30%;
+	height: fit-content;
 
-	margin: auto;
+	margin: 0px auto 20px auto;
+	padding-bottom: 5px;
 
 	border: 1px solid rgba(0,0,0,0.3);
 	border-bottom: 2px solid rgba(2, 46, 93, 0.7);
@@ -142,7 +143,7 @@
 
 .button-container button {
 	font-weight: 600;
-	font-size: 27px;
+	font-size: 20px;
 	margin: 0;
 
 	border-radius: 7px;
@@ -150,9 +151,33 @@
 	display: inline-block;
 
 	width: 87%;
-	height: 32%;
+	height: fit-content;
+	padding: 10px 0px;
+	margin: 0px auto 10px auto;
 }
 
-#quit-ride {
+.ride-cancel-button {
 	background-color: red;
+}
+
+/* Passenger details in button container for cancelling ride */
+.passenger-details-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: flex-start;
+	width: 87%;
+	padding-left: 1em;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+.passenger-details-name {
+	font-weight: 600;
+	font-size: 1.2em;
+}
+
+.passenger-details-code {
+	font-weight: 300;
+	font-size: 1em;
 }
