trip and vehicle db modification

--- a/TaxiUp/nav/templates/nav/index.html
+++ b/TaxiUp/nav/templates/nav/index.html
@@ -149,7 +149,7 @@
 		<div id="pickup-container">
 			<div class="place noninteractive" id="trip-pickup-pic"></div>
 			<div id="pickup-text-container">
-				<p id="trip-pickup">Pick Up: Engineering III</p>
+				<p id="trip-pickup">Pick Up: Pickup still loading</p>
 				<p class="tip">Wait at the spot shown on this photo</p>
 			</div>
 		</div>
