multiple users on ride v1

--- a/TaxiUp/nav/templates/nav/driver.html
+++ b/TaxiUp/nav/templates/nav/driver.html
@@ -35,7 +35,7 @@
 		<p class="order-heading" id="order-confirm">Passenger Notified</p>
 
 		<!--Passenger Information-->
-		<p class="heading">Passenger</p>
+		<p class="heading">Passenger(s)</p>
 		<p id="passenger" class="order-info">Jane Doe</p>
 
 		<!--Trip Information-->
@@ -73,15 +73,17 @@
 		<p class="order-heading">Cancel Current Rides</p>
 
 		<!-- CANCEL BUTTONS -->
+		 <div class="cancel-containers">
 		<div class="button-container">
 			<div class="passenger-details-container">
-				<div class="passenger-details-name">John Doe</div>
-				<div class="passenger-details-code">5465464#</div>
+				<div class="passenger-details-name">Error Loading</div>
+				<div class="passenger-details-code">404#</div>
 			</div>
 			<button class="ride-complete-button">Complete Ride</button>
 			<button class="ride-cancel-button">Cancel Ride</button>
 		</div>
-
+		</div>
+		
 	</div>
 
 	<div id="cancel-trip-container">
